--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ path = "src/lib.rs"
 actix = "0.7"
 futures = "0.1"
 tokio = "0.1"
-rlua = "0.16"
+rlua = { git = "https://github.com/kyren/rlua", rev = "78c2aac5bda746c9046f701a6d8631ad53841baa" }
 uuid = { version = "0.6", features = ["v4"] }
 regex = "1"
 
